# bittensor-pylon

./: .gitignore  AGENT.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.observability.yml  docker-run.sh  grafana-datasource.yaml  live_test.py  noxfile.py  prometheus.yml  pylon.db  pylon_client.py  pyproject.toml
.github/actions/setup-nox/: action.yml
.github/workflows/: cd-docker.yml  cd.yml  ci.yml  deploy-dashboards.yml
app/: api.py  bittensor_client.py  db.py  main.py  models.py  settings.py  tasks.py  utils.py
app/alembic/: README  env.py
observability/: .gitignore  Dockerfile
observability/grafana/: pylon-dashboard-bittensor.jsonnet  pylon-dashboard-http.jsonnet  pylon-dashboard-system.jsonnet
pylon/_internal/: docker_manager.py
pylon/_internal/client/: abstract.py  async.py  asynchronous.py  config.py  mock.py
pylon/_internal/common/: constants.py  currency.py  endpoints.py  exceptions.py  models.py  requests.py  responses.py  settings.py  types.py
pylon/service/: api.py  bittensor_client.py  dependencies.py  lifespans.py  main.py  metrics.py  prometheus_controller.py  routers.py  tasks.py  utils.py
pylon/service/bittensor/: client.py  models.py  pool.py
pylon/service/envs/: test_env.template
pylon/v1/: __init__.py
pylon_client/: __init__.py  async_mock.py  client.py  constants.py  docker_manager.py  mock.py
pylon_common/: constants.py  models.py  settings.py
pylon_service/: api.py  bittensor_client.py  constants.py  db.py  main.py  models.py  pylon.db  settings.py  tasks.py  utils.py
pylon_service/alembic/: env.py
pylon_service/envs/: test_env.template
scripts/: deploy_dashboards.sh  env_prefix_demo.py  ping_metrics.py
tests/: .test-env  conftest.py  helpers.py  mock_bittensor_client.py  mock_data.json  test_api.py  test_archive_fallback.py  test_client.py  test_live.py  test_put_weights_endpoint.py  test_tasks.py  test_weights.py
tests/client/: conftest.py  test_mock_client.py
tests/client/asynchronous/: test_async_config.py  test_get_latest_neurons.py  test_get_metagraph.py  test_get_neurons.py  test_set_weights.py
tests/service/: test_archive_fallback.py  test_generate_certificate_keypair_endpoint.py  test_get_certificate_endpoint.py  test_get_certificates_endpoint.py  test_get_latest_neurons_endpoint.py  test_get_metagraph_endpoint.py  test_get_neurons_endpoint.py  test_get_own_certificate_endpoint.py  test_identities_settings.py  test_metrics_endpoint.py  test_put_weights_endpoint.py
tests/service/bittensor/: test_archive_fallback.py  test_bittensor_client_delegation.py  test_bittensor_client_pool.py
tests/service/identity_endpoints/: test_generate_certificate_keypair_endpoint.py  test_get_certificate_by_hotkey_endpoint.py  test_get_certificates_endpoint.py  test_get_latest_neurons_endpoint.py  (+3 more)
(+17 files in other folders)
