[project]
name = "bittensor-pylon"

version = "0.1.0"
description = "Bittensor Pylon: fast subnet data proxy."
authors = [
    { name = "Reef", email = "reef@reef.sh" }
]
requires-python = "==3.12.*"
dependencies = [
    "pydantic-settings",
    "pydantic",
    "turbobt>=0.0.3",
    "litestar[standard]",
    "cachetools",
    "requests",
    "bittensor_wallet",
    "sqlalchemy",
    "aiosqlite",
    "alembic"
]

[project.optional-dependencies]
dev = [
    "freezegun",
    "uv",
    "nox",
    "pytest",
    "pytest-asyncio>=1.0.0",
]
format = [
    "ruff",
    "ty"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "TC005",
]
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104",
    "E501", "B027", "B904", "B905",
]

[tool.uv]
# uv-specific settings can go here
