[project]
name = "bittensor-pylon"

version = "0.1.0"
description = "Bittensor Pylon: fast subnet data proxy."
authors = [
    { name = "Reef", email = "reef@reef.sh" }
]
requires-python = "==3.12.*"
dependencies = [
    "pydantic-settings",
    "pydantic",
    "turbobt>=0.1.3",
    "litestar[standard]",
    "cachetools",
    "docker",
    "requests",
    "bittensor_wallet",
    "sqlalchemy",
    "aiosqlite",
    "alembic",
    "tenacity",
    "sentry-sdk[litestar]",
    "greenlet"
]

[project.optional-dependencies]
dev = [
    "freezegun",
    "uv",
    "nox",
    "pytest",
    "pytest-asyncio>=1.0.0",
    "pytest-httpx",
    "turbobt>=0.0.8",
]
format = [
    "ruff",
    "ty", 
    "pyright",
    "freezegun",
    "sentry-sdk[litestar]"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "TC005",
]
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104",
    "E501", "B027", "B904", "B905",
]

[tool.uv]
# uv-specific settings can go here

[tool.setuptools]
packages = ["pylon_client", "pylon_service"]

